--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "start": "node build.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
