--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
@@ -28,9 +27,11 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "express": "^4.16.4",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "serve-static": "^1.13.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
